# dbtwiz

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENCE  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_tests.py  setup.py  whoami.yaml
.github/workflows/: test.yml
dbtwiz/: __init__.py  auth.py  backfill.py  bigquery.py  build.py  cleanup.py  config.py  dbt.py  freshness.py  interact.py  logging.py  main.py  manifest.py  model.py  model_group.py  model_step.py  precommit.py  project.py  style.py  support.py  target.py  test.py
dbtwiz/admin/: __init__.py  backfill.py  cleanup.py  clustering.py  descriptions.py  grants.py  partition.py  restore.py
dbtwiz/cli/: __init__.py  main.py
dbtwiz/commands/: __init__.py  backfill.py  build.py  config.py  freshness.py  manifest.py  model.py  precommit.py  test.py
dbtwiz/config/: __init__.py  loader.py  project.py  theme.py  user.py
dbtwiz/core/: __init__.py  model.py  project.py
dbtwiz/create/: __init__.py  model.py  source.py
dbtwiz/dbt/: __init__.py  manifest.py  model.py  project.py  run.py  support.py
dbtwiz/gcp/: auth.py  bigquery.py
dbtwiz/generate/: __init__.py  model.py  source.py
dbtwiz/helpers/: editor.py  git.py  logger.py  typer_docs.py
dbtwiz/integrations/: __init__.py  bigquery.py  gcp_auth.py
dbtwiz/model/: __init__.py  create.py  fix.py  format.py  from_sql.py  inspect.py  move.py  validate.py
dbtwiz/source/: __init__.py  create.py
dbtwiz/templates/: __init__.py  model_info.tpl
dbtwiz/ui/: __init__.py  interact.py  style.py
dbtwiz/utils/: __init__.py  contextmanagers.py  decorators.py  docs.py  editor.py  exceptions.py  git.py  logger.py  typer_docs.py
docs/: admin_backfill.md  admin_cleandev.md  admin_orphaned.md  admin_partition_expiry.md  admin_restore.md  admin_sync_descriptions.md  admin_update_clustering.md  admin_update_grants.md  backfill.md  build.md  config.md  freshness.md  manifest.md  model_create.md  model_fix.md  model_from_sql.md  model_inspect.md  model_lint.md  model_move.md  model_validate.md  source_create.md  sqlfix.md  test.md  testing.md
tests/: __init__.py  conftest.py  test_backfill.py  test_cli.py  test_config.py
tests/data/sample_dbt_project/: dbt_project.yml  pyproject.toml
