[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtwiz"
version = "0.2.16"
authors = [
    {name = "Amedia Produkt og Teknologi"}
]
description = "Python package with CLI helper tool for dbt in GCP using BigQuery"
readme = "README.md"
license = {text = "MIT"}
urls = {"Homepage" = "https://github.com/amedia/dbtwiz"}
requires-python = ">=3.11.0,<4"
dependencies = [
    "dbt-core>=1.9.1",
    "google-cloud-storage>=2.19.0",
    "iterfzf>=1.4.0",
    "questionary>=2.1.0",
    "rich>=13.9.0",
    "ruamel.yaml>=0.18.10",
    "typer>=0.15.0",
    "shandy-sqlfmt>=0.27.0"
]

[project.scripts]
dbtwiz = "dbtwiz.cli.main:main"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C90"]
lint.ignore = ["E501"]
target-version = "py311"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.3"
typer = "^0.15.2"
questionary = "^2.1.0"
pre-commit = "^4.0.1"
# Not used directly, but seems to be a dependency. Force newer version due to https://github.com/advisories/GHSA-xrx6-fmxq-rjj2
rsa = ">=4.7.0"
