[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtwiz"
version = "0.2.17"
authors = [
    {name = "Amedia Produkt og Teknologi"}
]
description = "Python package with CLI helper tool for dbt in GCP using BigQuery"
readme = "README.md"
license = {text = "MIT"}
urls = {"Homepage" = "https://github.com/amedia/dbtwiz"}
requires-python = ">=3.11.0,<4"
dependencies = [
    "dbt-core>=1.10.1",
    "google-cloud-storage>=3.3.0",
    "iterfzf>=1.8.0",
    "questionary>=2.1.0",
    "rich>=14.1.0",
    "ruamel.yaml>=0.18.15",
    "typer>=0.16.1",
    "shandy-sqlfmt>=0.27.0",
    "pydantic>=2.11.7"
]

[project.scripts]
dbtwiz = "dbtwiz.cli.main:main"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C90"]
lint.ignore = ["E501"]
target-version = "py311"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
typer = "^0.16.1"
questionary = "^2.1.0"
pre-commit = "^4.3.0"
# Not used directly, but seems to be a dependency. Force newer version due to https://github.com/advisories/GHSA-xrx6-fmxq-rjj2
rsa = ">=4.7.0"
